<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/banking1">


    <com.example.kayat.fontello.IconTextView
        android:id="@+id/banking_accounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingTop="@dimen/banking_menu_padding_top"
        android:clickable="true"
        app:text="@string/accounts"
        app:iconText="@string/banking_accounts_icon"
        app:iconSize="@integer/banking_menu_icon_size"
        app:textSize="@integer/banking_menu_text_size"
        app:alignment="horizontal"/>

    <com.example.kayat.fontello.IconTextView
        android:id="@+id/banking_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/banking_menu_padding_top"
        android:clickable="false"
        app:text="@string/cards"
        app:iconText="@string/banking_cards_icon"
        app:iconSize="@integer/banking_menu_icon_size"
        app:textSize="@integer/banking_menu_text_size"
        app:alignment="horizontal"/>

    <com.example.kayat.fontello.IconTextView
        android:id="@+id/banking_transfers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/banking_menu_padding_top"
        android:clickable="true"
        app:text="@string/tranfers"
        app:iconText="@string/banking_transfers_icon"
        app:iconSize="@integer/banking_menu_icon_size"
        app:textSize="@integer/banking_menu_text_size"
        app:alignment="horizontal"/>

    <com.example.kayat.fontello.IconTextView
        android:id="@+id/banking_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/banking_menu_padding_top"
        android:clickable="false"
        app:text="@string/exchange"
        app:iconText="@string/banking_exchange_icon"
        app:iconSize="@integer/banking_menu_icon_size"
        app:textSize="@integer/banking_menu_text_size"
        app:alignment="horizontal"/>




</LinearLayout>
